// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add pages allows you to add multiple pages 1`] = `
Array [
  Object {
    "component": "/whatever/index.js",
    "componentChunkName": "page-component---whatever-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
  },
  Object {
    "component": "/whatever/index.js",
    "componentChunkName": "page-component---whatever-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHiPizza",
    "jsonName": "hi-pizza.json",
    "path": "/hi/pizza/",
  },
]
`;

exports[`Add pages allows you to add pages 1`] = `
Object {
  "payload": Object {
    "component": "/whatever/index.js",
    "componentChunkName": "page-component---whatever-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
  },
  "type": "UPSERT_PAGE",
}
`;

exports[`Add pages allows you to add pages 2`] = `
Array [
  Object {
    "component": "/whatever/index.js",
    "componentChunkName": "page-component---whatever-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
  },
]
`;

exports[`Add pages allows you to add pages with context 1`] = `
Object {
  "payload": Object {
    "component": "/whatever/index.js",
    "componentChunkName": "page-component---whatever-index-js",
    "context": Object {
      "id": 123,
    },
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
  },
  "type": "UPSERT_PAGE",
}
`;

exports[`Add pages allows you to add pages with context 2`] = `
Array [
  Object {
    "component": "/whatever/index.js",
    "componentChunkName": "page-component---whatever-index-js",
    "context": Object {
      "id": 123,
    },
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
  },
]
`;

exports[`Add pages allows you to delete paths 1`] = `Array []`;

exports[`Add pages allows you to update existing pages (based on path) 1`] = `
Array [
  Object {
    "component": "/whatever2/index.js",
    "componentChunkName": "page-component---whatever-2-index-js",
    "context": Object {},
    "internalComponentName": "ComponentHi",
    "jsonName": "hi.json",
    "path": "/hi/",
  },
]
`;
